--- a/canvas_carousel_player.html
+++ b/canvas_carousel_player.html
@@ -14,13 +14,13 @@
 /* Custom colors */
 :root {
   --ua-blue: #2f3c5b;
-  --ua-blue-light: #306DC8;
+  --ua-blue-light: #589ad3;
 }
 
 /* Layout */
 #canvas-carousel {
-  width: 1050px;
-  height: 210px;
+  width: 950px;
+  height: 200px;
   cursor: pointer;
 }
 
@@ -79,7 +79,7 @@ ul, menu, dir {
 /* Play/Pause */
 #play-pause {
   position: absolute;
-  bottom: 50px;
+  bottom: 35px;
   right: 9px;
   z-index: 999;
 }
