--- a/canvas_carousel_player.html
+++ b/canvas_carousel_player.html
@@ -16,8 +16,8 @@
   --ua-blue: #2f3c5b;
   --ua-blue-light: #589ad3;
 }
-
-/* Layout */
+ @media screen and (min-width: 900px) {
+   /* Layout */
 #canvas-carousel {
   width: 860px;
   height: 180px;
@@ -113,6 +113,9 @@ ul, menu, dir {
   background-color: var(--ua-blue-light) !important;
   color: white !important;
 }
+    
+  }
+
 
 @media (prefers-reduced-motion) {
   body {
