--- a/canvas_carousel_player.html
+++ b/canvas_carousel_player.html
@@ -119,7 +119,12 @@ ul, menu, dir {
     display: none
   }
 }
-
+@media screen and (max-width: 1405px) {
+  body {
+    display: none
+  }
+}
+  
 </style>
 </head>
 
