--- a/canvas_carousel_player.html
+++ b/canvas_carousel_player.html
@@ -34,11 +34,11 @@
   margin-block-end: 0px;
 }
 
-ul, menu, dir {
+ul, menu, margin, dir {
   -webkit-padding-start: 0px;
 }
 
-ul, menu, dir {
+ul, menu, margin, dir {
   -moz-padding-start: 0px;
 }
 
@@ -65,7 +65,7 @@ ul, menu, dir {
 
 .carousel-control-prev .bi-chevron-left, .carousel-control-next .bi-chevron-right {
   color: var(--ua-blue);
-  font-size: 30px;
+  font-size: 20px;
 }
 
 .carousel-control-prev .bi-chevron-left:hover, .carousel-control-next .bi-chevron-right:hover {
